--- a/dashboard.html
+++ b/dashboard.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primera página</title>
-<!-- CSS only -->
+    <title>Dashboard</title>
+    <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 <script src="https://kit.fontawesome.com/993a3aa141.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -25,11 +26,11 @@
               <li class="list-group-item"> <i class="fa-brands fa-twitter fa-2x1"> </i> </li> 
               <!-- Button trigger modal -->
               <li class="list-group-item"> 
-                <i class="fa-solid fa-user-lock fa-2x1" type="button" data-bs-toggle="modal" data-bs-toggle="modal"data-bs-target="#exampleModal">
+                <i class="fa-solid fa-user fa-2x1" type="button" data-bs-toggle="modal" data-bs-toggle="modal"data-bs-target="#exampleModal">
               </i> 
             </li> 
           </ul>
-          <!-- Modall -->
+<!-- Modall -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -67,24 +68,33 @@
           </div>
         </div> 
       </nav>
-<!-- Sobre Mi-->
-<section id="sobre-mi" class="about">
-          <div class="container text-center">
-            <div class="row">
-              <div class="col-3">
-                <img src="img/fotoMarcos.jpeg" class="rounded-circle w-75" alt="..." title="...">
-              </div>
-              <div class="col-6 mt-4">
-                <h5>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium nostrum in autem illo iusto, ipsa, quod rem, ullam corrupti expedita minima veritatis incidunt dignissimos. Quisquam incidunt ipsam eligendi praesentium dignissimos.
-                </h5>
-              </div>
-              <div class="col-3"></div>
-            </div>
+      <section id=".." class="dashboard">
+    <div class="container text-center">
+        <div class="row">
+        <!--Sidebar-->
+          <div class="col1">
+            <ul class="list-group">
+                <li class="list-group-item"> Datos Personales</li>
+              
+                <li class="list-group-item list-group-item-primary">A simple primary list group item</li>
+                <li class="list-group-item list-group-item-secondary">A simple secondary list group item</li>
+                <li class="list-group-item list-group-item-success">A simple success list group item</li>
+                <li class="list-group-item list-group-item-danger">A simple danger list group item</li>
+                <li class="list-group-item list-group-item-warning">A simple warning list group item</li>
+                <li class="list-group-item list-group-item-info">A simple info list group item</li>
+                <li class="list-group-item list-group-item-light">A simple light list group item</li>
+                <li class="list-group-item list-group-item-dark">A simple dark list group item</li>
+              </ul>
+          </div> 
+        <!--Body-->
+          <div class="col2">
+            <h4>Datos Personales</h4>
           </div>
-</section>
-
+        </div>
+      </div>
+    </section>
 <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">    
+</script>
+    </body>
 </html>
